<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nd_home"
            android:checked="true"/>
        <item
            android:id="@+id/navigation_ps4"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/ps4_tab"/>
        <item
            android:id="@+id/navigation_xbox"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/xbox_tab"/>
        <item
            android:id="@+id/navigation_ofertas"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/ofertas_tab"/>
    </group>
    <item android:title="Compra">
        <menu>
            <item
                android:id="@+id/navigation_shop"
                android:icon="@drawable/baseline_shopping_cart_white_24dp"
                android:title="Compras"
                />
        </menu>
    </item>

    <item android:title="@string/nd_supportTitle">
        <menu>
            <item
                android:id="@+id/navigation_contact"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nd_contact"
                />
            <item
                android:id="@+id/navigation_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nd_help"
                />
        </menu>
    </item>
</menu>